[package]
name = "imgbb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.53", features = ["derive"] }
llpha = { path = "../llpha" }
reqwest = { version = "0.13.4", features = ["gzip", "brotli", "zstd", "deflate"] }
scraper = "0.27.0"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1"
